# Remember-The-Milk-Simple

./: CMakeLists.txt  README.md  plasma-applet-rememberthemilk-simple.desktop  rememberthemilk-simple.cpp  rememberthemilk-simple.h  taskeditor.cpp  taskeditor.h  taskitemdelegate.cpp
